# Text-To-SQL-LLM-App

./: README.md  app.py  pyproject.toml  sql.py  student.db
.github/workflows/: main.yml
